--- a/package.json
+++ b/package.json
@@ -17,6 +17,8 @@
         "vite": "^5.0"
     },
     "dependencies": {
-        "bootstrap-icons": "^1.11.3"
+        "bootstrap": "^5.3.3",
+        "bootstrap-icons": "^1.11.3",
+        "sass": "^1.80.6"
     }
 }
