--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
         "autoprefixer": "^10.4.2",
         "axios": "^1.7.4",
         "concurrently": "^9.0.1",
-        "laravel-vite-plugin": "^1.0",
+        "laravel-vite-plugin": "^1.1.1",
         "postcss": "^8.4.31",
         "sass-embedded": "^1.80.6",
         "tailwindcss": "^3.1.0",
@@ -20,6 +20,7 @@
     "dependencies": {
         "bootstrap": "^5.3.3",
         "bootstrap-icons": "^1.11.3",
-        "sass": "^1.80.6"
+        "mdb-ui-kit": "^8.1.0",
+        "sass": "^1.82.0"
     }
 }
