--- a/composer.json
+++ b/composer.json
@@ -8,7 +8,8 @@
         "php": "^8.2",
         "darryldecode/cart": "^4.2",
         "laravel/framework": "^11.9",
-        "laravel/tinker": "^2.9"
+        "laravel/tinker": "^2.9",
+        "mercadopago/dx-php": "3.2.0"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
