--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,7 @@
         "darryldecode/cart": "^4.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "mercadopago/dx-php": "3.2.0"
+        "mercadopago/dx-php": "^3.2"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
