--- a/composer.json
+++ b/composer.json
@@ -9,7 +9,8 @@
         "darryldecode/cart": "^4.2",
         "laravel/framework": "^11.9",
         "laravel/tinker": "^2.9",
-        "mercadopago/dx-php": "^3.3"
+        "mercadopago/dx-php": "^3.4",
+        "mercadopago/sdk": "^0.5.6"
     },
     "require-dev": {
         "fakerphp/faker": "^1.23",
